[gd_scene load_steps=81 format=3 uid="uid://b4jhjuk68nvxn"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_k6v67"]
[ext_resource type="Texture2D" uid="uid://cg6hywphvknjk" path="res://Assets/Top down character template by RgsDev/death animation/death1.png" id="1_rr25p"]
[ext_resource type="Texture2D" uid="uid://4s4oltmw2boa" path="res://Assets/Top down character template by RgsDev/death animation/death2.png" id="2_1m6ts"]
[ext_resource type="PackedScene" uid="uid://fhemrwwbqb10" path="res://Scenes/bullet.tscn" id="2_j2twm"]
[ext_resource type="Texture2D" uid="uid://c6cng31w0nn8u" path="res://Assets/Top down character template by RgsDev/death animation/death3.png" id="3_gn0wp"]
[ext_resource type="Texture2D" uid="uid://ey6b53yy0fhs" path="res://Assets/Top down character template by RgsDev/death animation/death4.png" id="4_3gfyo"]
[ext_resource type="Texture2D" uid="uid://dxl1uvr62fb2l" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle down1.png" id="5_kt4dw"]
[ext_resource type="Texture2D" uid="uid://bs7vhch7w3a8b" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle down2.png" id="6_j6ti3"]
[ext_resource type="Texture2D" uid="uid://ct425rut22l84" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle down3.png" id="7_74q61"]
[ext_resource type="Texture2D" uid="uid://u5oy6svujvvt" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle down4.png" id="8_tgmoo"]
[ext_resource type="Texture2D" uid="uid://lho11h18xhrv" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle left1.png" id="9_tmjb4"]
[ext_resource type="Texture2D" uid="uid://bgcwd34n055qh" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle left2.png" id="10_d8iqn"]
[ext_resource type="Texture2D" uid="uid://tn4c8oimnl0s" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle down1.png" id="10_hadrs"]
[ext_resource type="Texture2D" uid="uid://bjx6hkt0nn16f" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle down2.png" id="11_au1pk"]
[ext_resource type="Texture2D" uid="uid://c6k851rfq3mes" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle left3.png" id="11_xdq27"]
[ext_resource type="Texture2D" uid="uid://cscda3o7gaaw7" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle down3.png" id="12_j75el"]
[ext_resource type="Texture2D" uid="uid://dl1co5jbl07yy" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle left4.png" id="12_q40gy"]
[ext_resource type="Texture2D" uid="uid://ch31x8fhhx38s" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk left1.png" id="13_kkhv2"]
[ext_resource type="Texture2D" uid="uid://bto3awsobxb7b" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle down4.png" id="13_y4hcn"]
[ext_resource type="Texture2D" uid="uid://dhkepgypekuaa" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk left2.png" id="14_eo36n"]
[ext_resource type="Texture2D" uid="uid://c0l7sqb2b0bh8" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll down1.png" id="15_oad5u"]
[ext_resource type="Texture2D" uid="uid://ccy511bhva3ia" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk left3.png" id="15_ym5eo"]
[ext_resource type="Texture2D" uid="uid://bewtms5evsugu" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll down2.png" id="16_4qx2c"]
[ext_resource type="Texture2D" uid="uid://w5h4a8ypc3ru" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk left4.png" id="16_q3e5o"]
[ext_resource type="Texture2D" uid="uid://dvakt838o1bnj" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle up1.png" id="17_7728f"]
[ext_resource type="Texture2D" uid="uid://dtv4ml12etw32" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll down3.png" id="17_y5ewj"]
[ext_resource type="Texture2D" uid="uid://b8mmfsqgm1qy" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll down4.png" id="18_q8wmc"]
[ext_resource type="Texture2D" uid="uid://cqs0k3h8vyk05" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle up2.png" id="18_rxwkv"]
[ext_resource type="Texture2D" uid="uid://dj764edotj3jd" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk down1.png" id="18_yqtuq"]
[ext_resource type="Texture2D" uid="uid://hsyff1p2mrk7" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll down1.png" id="19_0rdj2"]
[ext_resource type="Texture2D" uid="uid://b36xla8u6fido" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle up3.png" id="19_0vyyj"]
[ext_resource type="Texture2D" uid="uid://5njybkqfuf2n" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk down2.png" id="19_2dvje"]
[ext_resource type="Texture2D" uid="uid://0l3tmjh1r12r" path="res://Assets/Top down character template by RgsDev/Character without weapon/idle/idle up4.png" id="20_o6ajh"]
[ext_resource type="Texture2D" uid="uid://bnkqo76plbaif" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll down2.png" id="20_rymvc"]
[ext_resource type="Texture2D" uid="uid://casnr3kh45hqo" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk down3.png" id="20_v31mn"]
[ext_resource type="Texture2D" uid="uid://n25vkanii7fe" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk up1.png" id="21_1wpgm"]
[ext_resource type="Texture2D" uid="uid://dup8y28hoxok8" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk down4.png" id="21_khi83"]
[ext_resource type="Texture2D" uid="uid://b0td85or0gqp5" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll down3.png" id="21_obatn"]
[ext_resource type="Texture2D" uid="uid://v05e3cxb0xcf" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll down4.png" id="22_av82h"]
[ext_resource type="Texture2D" uid="uid://d3e2504enssuv" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk up2.png" id="22_t6hn5"]
[ext_resource type="Texture2D" uid="uid://cwbq6l5ypg11y" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk up3.png" id="23_qc7x6"]
[ext_resource type="Texture2D" uid="uid://ck4batc6jg75n" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk up4.png" id="24_7ic8o"]
[ext_resource type="Texture2D" uid="uid://c6peaw36hndi8" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk down1.png" id="25_8l7bp"]
[ext_resource type="Texture2D" uid="uid://b255gnv8akffb" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle left1.png" id="26_f8cep"]
[ext_resource type="Texture2D" uid="uid://bp3eo4kh0eyab" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk down2.png" id="26_otp8v"]
[ext_resource type="Texture2D" uid="uid://befx17xuob0od" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk down3.png" id="27_7ej2q"]
[ext_resource type="Texture2D" uid="uid://cxea1n7rsy0cr" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle left2.png" id="27_rsqcr"]
[ext_resource type="Texture2D" uid="uid://0rblvijtabwk" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle left3.png" id="28_f0buj"]
[ext_resource type="Texture2D" uid="uid://cwkig11knpvyn" path="res://Assets/Top down character template by RgsDev/Character without weapon/walk/walk down4.png" id="28_jdstt"]
[ext_resource type="Texture2D" uid="uid://c5nkp5ypu8jqf" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle left4.png" id="29_v72o3"]
[ext_resource type="Texture2D" uid="uid://1j68eemmf27w" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk left1.png" id="34_ecrww"]
[ext_resource type="Texture2D" uid="uid://bdrq8dhkoghpc" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk left2.png" id="35_vvkbn"]
[ext_resource type="Texture2D" uid="uid://d2riaq06oivcn" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk left3.png" id="36_1yxbj"]
[ext_resource type="Texture2D" uid="uid://cy2mkbc5r5p55" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk left4.png" id="37_543vp"]
[ext_resource type="Texture2D" uid="uid://ccaka6urfmhat" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll left1.png" id="39_huu6c"]
[ext_resource type="Texture2D" uid="uid://chw8vjjwdai4q" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll left2.png" id="40_gi4x7"]
[ext_resource type="Texture2D" uid="uid://6nkep0q637r5" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll left3.png" id="41_mpcet"]
[ext_resource type="Texture2D" uid="uid://clhoia438kn23" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll left4.png" id="42_5luoh"]
[ext_resource type="Texture2D" uid="uid://dycj5c41g3xb3" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle up1.png" id="42_63g0w"]
[ext_resource type="Texture2D" uid="uid://bd6qx8hn2i8r7" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle up2.png" id="43_osbfx"]
[ext_resource type="Texture2D" uid="uid://00s1vejwchfj" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll left1.png" id="43_v5i2q"]
[ext_resource type="Texture2D" uid="uid://bvemkj8lsxw2k" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle up3.png" id="44_gn031"]
[ext_resource type="Texture2D" uid="uid://edqgmuqfmp3a" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll left2.png" id="44_mopje"]
[ext_resource type="Texture2D" uid="uid://bvnf2k3ayqcvy" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll left3.png" id="45_4jnn3"]
[ext_resource type="Texture2D" uid="uid://dmy1dwjgjoxm8" path="res://Assets/Top down character template by RgsDev/Character with pistol/idle/idle up4.png" id="45_fhtyw"]
[ext_resource type="Texture2D" uid="uid://t7nafgq373uv" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll left4.png" id="46_gx5ou"]
[ext_resource type="Texture2D" uid="uid://baqri07ehd56e" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk up1.png" id="50_rmccp"]
[ext_resource type="Texture2D" uid="uid://dfkihea0cwq3j" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk up2.png" id="51_mohqp"]
[ext_resource type="Texture2D" uid="uid://dcrt6lflxbxg4" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk up3.png" id="52_pxb64"]
[ext_resource type="Texture2D" uid="uid://cnbh5yikn8ai1" path="res://Assets/Top down character template by RgsDev/Character with pistol/walk/walk up4.png" id="53_6tlef"]
[ext_resource type="Texture2D" uid="uid://bbudjvd6y1271" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll up1.png" id="63_235kq"]
[ext_resource type="Texture2D" uid="uid://dbnlh36lg8u3o" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll up2.png" id="64_408bp"]
[ext_resource type="Texture2D" uid="uid://bk88w6233m1py" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll up3.png" id="65_x3qi7"]
[ext_resource type="Texture2D" uid="uid://lbhs8oahaxus" path="res://Assets/Top down character template by RgsDev/Character without weapon/roll/roll up4.png" id="66_n81xl"]
[ext_resource type="Texture2D" uid="uid://0rjllblqgax" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll up1.png" id="67_ff0dh"]
[ext_resource type="Texture2D" uid="uid://d2u01wxyny1bi" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll up2.png" id="68_pnya7"]
[ext_resource type="Texture2D" uid="uid://2fy6bnhfkxyr" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll up3.png" id="69_j8uax"]
[ext_resource type="Texture2D" uid="uid://687exskfyem5" path="res://Assets/Top down character template by RgsDev/Character with pistol/roll/roll up4.png" id="70_csf7h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0xnxh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rr25p")
}, {
"duration": 1.0,
"texture": ExtResource("2_1m6ts")
}, {
"duration": 1.0,
"texture": ExtResource("3_gn0wp")
}, {
"duration": 1.0,
"texture": ExtResource("4_3gfyo")
}],
"loop": false,
"name": &"death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_kt4dw")
}, {
"duration": 1.0,
"texture": ExtResource("6_j6ti3")
}, {
"duration": 1.0,
"texture": ExtResource("7_74q61")
}, {
"duration": 1.0,
"texture": ExtResource("8_tgmoo")
}],
"loop": true,
"name": &"down_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_hadrs")
}, {
"duration": 1.0,
"texture": ExtResource("11_au1pk")
}, {
"duration": 1.0,
"texture": ExtResource("12_j75el")
}, {
"duration": 1.0,
"texture": ExtResource("13_y4hcn")
}],
"loop": true,
"name": &"down_idle_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_oad5u")
}, {
"duration": 1.0,
"texture": ExtResource("16_4qx2c")
}, {
"duration": 1.0,
"texture": ExtResource("17_y5ewj")
}, {
"duration": 1.0,
"texture": ExtResource("18_q8wmc")
}],
"loop": true,
"name": &"down_roll",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_0rdj2")
}, {
"duration": 1.0,
"texture": ExtResource("20_rymvc")
}, {
"duration": 1.0,
"texture": ExtResource("21_obatn")
}, {
"duration": 1.0,
"texture": ExtResource("22_av82h")
}],
"loop": false,
"name": &"down_roll_gun",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_8l7bp")
}, {
"duration": 1.0,
"texture": ExtResource("26_otp8v")
}, {
"duration": 1.0,
"texture": ExtResource("27_7ej2q")
}, {
"duration": 1.0,
"texture": ExtResource("28_jdstt")
}],
"loop": true,
"name": &"down_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_yqtuq")
}, {
"duration": 1.0,
"texture": ExtResource("19_2dvje")
}, {
"duration": 1.0,
"texture": ExtResource("20_v31mn")
}, {
"duration": 1.0,
"texture": ExtResource("21_khi83")
}],
"loop": true,
"name": &"down_walk_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_tmjb4")
}, {
"duration": 1.0,
"texture": ExtResource("10_d8iqn")
}, {
"duration": 1.0,
"texture": ExtResource("11_xdq27")
}, {
"duration": 1.0,
"texture": ExtResource("12_q40gy")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_f8cep")
}, {
"duration": 1.0,
"texture": ExtResource("27_rsqcr")
}, {
"duration": 1.0,
"texture": ExtResource("28_f0buj")
}, {
"duration": 1.0,
"texture": ExtResource("29_v72o3")
}],
"loop": true,
"name": &"side_idle_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_huu6c")
}, {
"duration": 1.0,
"texture": ExtResource("40_gi4x7")
}, {
"duration": 1.0,
"texture": ExtResource("41_mpcet")
}, {
"duration": 1.0,
"texture": ExtResource("42_5luoh")
}],
"loop": true,
"name": &"side_roll",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_v5i2q")
}, {
"duration": 1.0,
"texture": ExtResource("44_mopje")
}, {
"duration": 1.0,
"texture": ExtResource("45_4jnn3")
}, {
"duration": 1.0,
"texture": ExtResource("46_gx5ou")
}],
"loop": true,
"name": &"side_roll_gun",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_kkhv2")
}, {
"duration": 1.0,
"texture": ExtResource("14_eo36n")
}, {
"duration": 1.0,
"texture": ExtResource("15_ym5eo")
}, {
"duration": 1.0,
"texture": ExtResource("16_q3e5o")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_ecrww")
}, {
"duration": 1.0,
"texture": ExtResource("35_vvkbn")
}, {
"duration": 1.0,
"texture": ExtResource("36_1yxbj")
}, {
"duration": 1.0,
"texture": ExtResource("37_543vp")
}],
"loop": true,
"name": &"side_walk_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_7728f")
}, {
"duration": 1.0,
"texture": ExtResource("18_rxwkv")
}, {
"duration": 1.0,
"texture": ExtResource("19_0vyyj")
}, {
"duration": 1.0,
"texture": ExtResource("20_o6ajh")
}],
"loop": true,
"name": &"up_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_63g0w")
}, {
"duration": 1.0,
"texture": ExtResource("43_osbfx")
}, {
"duration": 1.0,
"texture": ExtResource("44_gn031")
}, {
"duration": 1.0,
"texture": ExtResource("45_fhtyw")
}],
"loop": true,
"name": &"up_idle_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("63_235kq")
}, {
"duration": 1.0,
"texture": ExtResource("64_408bp")
}, {
"duration": 1.0,
"texture": ExtResource("65_x3qi7")
}, {
"duration": 1.0,
"texture": ExtResource("66_n81xl")
}],
"loop": true,
"name": &"up_roll",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("67_ff0dh")
}, {
"duration": 1.0,
"texture": ExtResource("68_pnya7")
}, {
"duration": 1.0,
"texture": ExtResource("69_j8uax")
}, {
"duration": 1.0,
"texture": ExtResource("70_csf7h")
}],
"loop": true,
"name": &"up_roll_gun",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_1wpgm")
}, {
"duration": 1.0,
"texture": ExtResource("22_t6hn5")
}, {
"duration": 1.0,
"texture": ExtResource("23_qc7x6")
}, {
"duration": 1.0,
"texture": ExtResource("24_7ic8o")
}],
"loop": true,
"name": &"up_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("50_rmccp")
}, {
"duration": 1.0,
"texture": ExtResource("51_mohqp")
}, {
"duration": 1.0,
"texture": ExtResource("52_pxb64")
}, {
"duration": 1.0,
"texture": ExtResource("53_6tlef")
}],
"loop": true,
"name": &"up_walk_gun",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ngs1"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
script = ExtResource("1_k6v67")
BulletScene = ExtResource("2_j2twm")

[node name="Player_Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_0xnxh")
animation = &"down_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
shape = SubResource("CircleShape2D_1ngs1")

[node name="Death_Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Roll_Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="Death_Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Roll_Timer" to="." method="_on_roll_timer_timeout"]
